--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,17 @@
         }
 
         .logo {
-            width: 120px;
-            height: 120px;
+            width: 150px;
+            height: 150px;
             margin-bottom: 2rem;
-            filter: invert(1);
+            filter: brightness(0) invert(1);
+            opacity: 0.9;
+            transition: all 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.05);
+            opacity: 1;
         }
 
         .container {
@@ -108,8 +115,8 @@
 </head>
 <body>
     <div class="container">
-        <!-- Logo kucing -->
-        <img src="https://raw.githubusercontent.com/masalfi/API-Social-Media-Downloader/main/public/images/cat-logo.png" alt="Cat Logo" class="logo">
+        <!-- Logo kraken -->
+        <img src="/assets/images/kraken.png" alt="Kraken Logo" class="logo">
         
         <!-- Form input -->
         <div class="input-group">
