--- a/public/index.html
+++ b/public/index.html
@@ -111,16 +111,55 @@
             border: none;
             color: #fff;
         }
+
+        .form-check {
+            margin-top: 1rem;
+            text-align: left;
+            padding-left: 2rem;
+        }
+
+        .form-check-input {
+            background-color: transparent;
+            border-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .form-check-input:checked {
+            background-color: rgba(255, 255, 255, 0.5);
+            border-color: rgba(255, 255, 255, 0.5);
+        }
+
+        .form-text {
+            color: rgba(255, 255, 255, 0.6) !important;
+            font-size: 0.8rem;
+            margin-top: 0.25rem;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- Logo kraken -->
-        <img src="/assets/images/kraken.png" alt="Kraken Logo" class="logo">
+        <img src="/assets/images/kraken.png" alt="Kraken" class="logo">
         
         <!-- Form input -->
         <div class="input-group">
-            <input type="text" class="form-control" id="url" placeholder="paste the link here">
+            <input type="text" class="form-control" id="url" placeholder="Paste URL here..." autocomplete="off">
+            <button type="button" class="btn" id="submitBtn">
+                <i class="fas fa-paper-plane"></i>
+            </button>
+        </div>
+        <button type="button" class="btn btn-paste" id="pasteBtn" style="float: right;">
+            <i class="fas fa-clipboard"></i> paste
+        </button>
+
+        <!-- Metadata option -->
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="removeMetadata" checked>
+            <label class="form-check-label" for="removeMetadata">
+                Hapus metadata video
+            </label>
+            <div class="form-text">
+                <i class="fas fa-info-circle"></i> Mungkin jika metadata dihapus proses download akan sedikit memerlukan waktu yang lama
+            </div>
         </div>
 
         <!-- Tombol-tombol -->
@@ -133,9 +172,6 @@
             </button>
             <button type="button" class="btn" id="muteBtn">
                 <i class="fas fa-volume-mute"></i> mute
-            </button>
-            <button type="button" class="btn btn-paste" id="pasteBtn" style="float: right;">
-                <i class="fas fa-clipboard"></i> paste
             </button>
         </div>
 
@@ -163,6 +199,7 @@
 
         async function downloadVideo() {
             const url = document.getElementById('url').value;
+            const removeMetadata = document.getElementById('removeMetadata').checked;
             if (!url) return;
 
             document.getElementById('loading').style.display = 'block';
@@ -181,8 +218,32 @@
                 const data = await response.json();
 
                 if (data.status === 'success') {
-                    // Redirect ke endpoint download yang sesuai
-                    window.location.href = `/api/${data.platform}/download?url=${encodeURIComponent(url)}`;
+                    // Download video menggunakan metode POST
+                    const downloadResponse = await fetch(`/api/${data.platform}/download`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ 
+                            url,
+                            removeMetadata
+                        })
+                    });
+
+                    if (!downloadResponse.ok) {
+                        throw new Error('Gagal mengunduh video');
+                    }
+
+                    // Buat blob dari response dan download file
+                    const blob = await downloadResponse.blob();
+                    const downloadUrl = window.URL.createObjectURL(blob);
+                    const a = document.createElement('a');
+                    a.href = downloadUrl;
+                    a.download = `video_${data.platform}.mp4`;
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(downloadUrl);
+                    document.body.removeChild(a);
                 } else {
                     document.getElementById('result').innerHTML = `
                         <div class="alert alert-danger">
@@ -203,11 +264,121 @@
 
         // Event listeners untuk tombol
         document.getElementById('autoBtn').addEventListener('click', downloadVideo);
-        document.getElementById('audioBtn').addEventListener('click', () => {
-            // Implementasi download audio
+        document.getElementById('submitBtn').addEventListener('click', downloadVideo);
+        document.getElementById('audioBtn').addEventListener('click', async () => {
+            const url = document.getElementById('url').value;
+            const removeMetadata = document.getElementById('removeMetadata').checked;
+            if (!url) return;
+
+            document.getElementById('loading').style.display = 'block';
+            document.getElementById('result').innerHTML = '';
+
+            try {
+                const response = await fetch('/api/detect-platform', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ url })
+                });
+
+                const data = await response.json();
+
+                if (data.status === 'success') {
+                    // Download audio
+                    const downloadResponse = await fetch(`/api/${data.platform}/download`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ 
+                            url,
+                            format: 'audio',
+                            removeMetadata
+                        })
+                    });
+
+                    if (!downloadResponse.ok) {
+                        throw new Error('Gagal mengunduh audio');
+                    }
+
+                    const blob = await downloadResponse.blob();
+                    const downloadUrl = window.URL.createObjectURL(blob);
+                    const a = document.createElement('a');
+                    a.href = downloadUrl;
+                    a.download = `audio_${data.platform}.mp3`;
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(downloadUrl);
+                    document.body.removeChild(a);
+                }
+            } catch (error) {
+                document.getElementById('result').innerHTML = `
+                    <div class="alert alert-danger">
+                        Terjadi kesalahan: ${error.message}
+                    </div>
+                `;
+            } finally {
+                document.getElementById('loading').style.display = 'none';
+            }
         });
-        document.getElementById('muteBtn').addEventListener('click', () => {
-            // Implementasi download video tanpa suara
+
+        document.getElementById('muteBtn').addEventListener('click', async () => {
+            const url = document.getElementById('url').value;
+            const removeMetadata = document.getElementById('removeMetadata').checked;
+            if (!url) return;
+
+            document.getElementById('loading').style.display = 'block';
+            document.getElementById('result').innerHTML = '';
+
+            try {
+                const response = await fetch('/api/detect-platform', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ url })
+                });
+
+                const data = await response.json();
+
+                if (data.status === 'success') {
+                    // Download video tanpa suara
+                    const downloadResponse = await fetch(`/api/${data.platform}/download`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ 
+                            url,
+                            mute: true,
+                            removeMetadata
+                        })
+                    });
+
+                    if (!downloadResponse.ok) {
+                        throw new Error('Gagal mengunduh video');
+                    }
+
+                    const blob = await downloadResponse.blob();
+                    const downloadUrl = window.URL.createObjectURL(blob);
+                    const a = document.createElement('a');
+                    a.href = downloadUrl;
+                    a.download = `video_mute_${data.platform}.mp4`;
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(downloadUrl);
+                    document.body.removeChild(a);
+                }
+            } catch (error) {
+                document.getElementById('result').innerHTML = `
+                    <div class="alert alert-danger">
+                        Terjadi kesalahan: ${error.message}
+                    </div>
+                `;
+            } finally {
+                document.getElementById('loading').style.display = 'none';
+            }
         });
 
         // Enter key handler
