--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media Downloader</title>
+    <title>Kraken</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -164,10 +164,10 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="removeMetadata">
             <label class="form-check-label" for="removeMetadata">
-                Hapus metadata video
+                Delete metadata
             </label>
             <div class="form-text">
-                <i class="fas fa-info-circle"></i> Mungkin jika metadata dihapus proses download akan sedikit memerlukan waktu yang lama
+                <i class="fas fa-info-circle"></i> If the feature is activated, the download process will take a little longer.
             </div>
         </div>
 
